<resources>
    <string name="app_name">Smart Activity Tracker</string>
    <string name="app_name_short">S. A. T.</string>
    <string name="statistic_name">Статистика</string>
    <string name="monitoring_name">Мониторинг</string>
    <string name="settings_name">Настройки</string>
    <string name="current_pulse">Пульс: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_temperature">Температура тела:</string>
    <string name="current_oxygen">Уровень кислорода в крови:</string>
    <string name="start">Старт</string>
    <string name="stepsCount">количество шагов за сегодня:</string>
    <string name="predict_string">Прогноз активности \n пульс</string>
    <string name="predict">Прогноз</string>
</resources>