<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMonitorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="-"
            android:textColor="#3498DB"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_text_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_text_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_text_temperature" />

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="-"
            android:textColor="#3498DB"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_text_steps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_text_steps"
            app:layout_constraintTop_toTopOf="@+id/tv_text_steps"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/img_heart_monitor"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.20"
            app:srcCompat="@drawable/img_big_heart_monitor" />

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_text_puls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_pulse"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_oxygen"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/current_temperature"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_text_puls"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_puls"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_text_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stepsCount"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_text_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_temperature"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="-"
            android:textColor="#3498DB"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_text_puls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_text_puls"
            app:layout_constraintTop_toTopOf="@+id/tv_text_puls" />

        <ImageView
            android:id="@+id/img_temperature"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/img_temperature_ico"
            app:layout_constraintBottom_toBottomOf="@+id/img_heart_monitor"
            app:layout_constraintStart_toEndOf="@+id/img_heart_monitor"
            app:layout_constraintTop_toTopOf="@+id/img_heart_monitor" />

        <ImageView
            android:id="@+id/img_oxygen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_oxygen_ico"
            app:layout_constraintEnd_toEndOf="@+id/img_temperature"
            app:layout_constraintStart_toStartOf="@+id/img_heart_monitor"
            app:layout_constraintTop_toBottomOf="@+id/img_temperature" />

        <Button
            android:id="@+id/btn_start_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_oxygen"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/tv_text_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Содержание кислорода в крови"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_text_steps"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_steps"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="casual"
            android:text="-"
            android:textColor="#3498DB"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_text_oxygen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_text_oxygen"
            app:layout_constraintTop_toTopOf="@+id/tv_text_oxygen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>